--- a/src/main/webapp/WEB-INF/view/common/_container.html
+++ b/src/main/webapp/WEB-INF/view/common/_container.html
@@ -8,6 +8,7 @@
     <!-- 全局css -->
     <link rel="shortcut icon" href="${ctxPath}/static/favicon.ico">
     <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="${ctxPath}/static/css/wangEditor.min.css" rel="stylesheet">
     <link href="${ctxPath}/static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
     <link href="${ctxPath}/static/css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
     <link href="${ctxPath}/static/css/plugins/validate/bootstrapValidator.min.css" rel="stylesheet">
@@ -22,6 +23,7 @@
 
     <!-- 全局js -->
     <script src="${ctxPath}/static/js/jquery.min.js?v=2.1.4"></script>
+    <script src="${ctxPath}/static/js/wangEditor.min.js"></script>
     <script src="${ctxPath}/static/js/bootstrap.min.js?v=3.3.6"></script>
     <script src="${ctxPath}/static/js/plugins/ztree/jquery.ztree.all.min.js"></script>
     <script src="${ctxPath}/static/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
