--- a/src/main/webapp/WEB-INF/view/modular/news/news.html
+++ b/src/main/webapp/WEB-INF/view/modular/news/news.html
@@ -3,28 +3,17 @@
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h5>角色管理</h5>
+                <h5>新闻管理</h5>
             </div>
             <div class="ibox-content">
                 <div class="row row-lg">
                     <div class="col-sm-12">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <#NameCon id="roleName" name="角色名称" />
-                            </div>
-                            <div class="col-sm-3">
-                                <#button name="搜索" icon="fa-search" clickFun="Role.search()"/>
-                            </div>
-                        </div>
                         <div class="hidden-xs" id="roleTableToolbar" role="group">
-                            @if(shiro.hasPermission("/news/add")){
-                            <#button name="添加" icon="fa-plus" clickFun="Role.openAddRole()" />
+                            @if(shiro.hasPermission("/news/editNews")){
+                            <#button name="修改" icon="fa-edit" clickFun="News.openEditNews()" space="true"/>
                             @}
-                            @if(shiro.hasPermission("/news/edit")){
-                            <#button name="修改" icon="fa-edit" clickFun="Role.openChangeRole()" space="true"/>
-                            @}
-                            @if(shiro.hasPermission("/news/remove")){
-                            <#button name="删除" icon="fa-remove" clickFun="Role.delRole()" space="true"/>
+                            @if(shiro.hasPermission("/news/removeNews")){
+                            <#button name="删除" icon="fa-remove" clickFun="News.removeNews()" space="true"/>
                             @}
                         </div>
                         <#table id="newsTable"/>
