完善富文本编辑器功能

--- a/src/main/webapp/WEB-INF/view/modular/news/news.html
+++ b/src/main/webapp/WEB-INF/view/modular/news/news.html
@@ -15,6 +15,7 @@
                             @if(shiro.hasPermission("/news/removeNews")){
                             <#button name="删除" icon="fa-remove" clickFun="News.removeNews()" space="true"/>
                             @}
+                            <#button name="查看" icon="fa-remove" clickFun="News.watch()" space="true"/>
                             <#button name="刷新" icon="fa-remove" clickFun="News.refresh()" space="true"/>
                         </div>
                         <#table id="newsTable"/>
