--- a/src/main/webapp/WEB-INF/view/modular/news/newsAdd.html
+++ b/src/main/webapp/WEB-INF/view/modular/news/newsAdd.html
@@ -21,6 +21,10 @@
             </select>
         </div>
         <div class="form-group">
+            <label for="realtime">项目发布时间：</label>
+            <input placeholder="必填(2018-04-26)" name="" class="form-control" id="realtime" cols="30" rows="5"/>
+        </div>
+        <div class="form-group">
             <label for="draft">摘要：</label>
             <textarea placeholder="必填" name="" class="form-control" id="draft" cols="30" rows="5"></textarea>
         </div>
