--- a/src/main/webapp/WEB-INF/view/modular/news/newsEdit.html
+++ b/src/main/webapp/WEB-INF/view/modular/news/newsEdit.html
@@ -26,6 +26,10 @@
             <textarea placeholder="必填" name="" class="form-control" id="draft" cols="30" rows="5"></textarea>
         </div>
         <div class="form-group">
+            <label for="realtime">项目发布时间：</label>
+            <input placeholder="必填(2018-04-26)" name="" class="form-control" id="realtime" cols="30" rows="5"/>
+        </div>
+        <div class="form-group">
             <label for="comment">备注：</label>
             <textarea placeholder="可选" name="" class="form-control" id="comment" cols="30" rows="5"></textarea>
         </div>
